--- a/charts/observe/grafana-operator/values.yaml
+++ b/charts/observe/grafana-operator/values.yaml
@@ -11,7 +11,7 @@
 ## @param global.imagePullSecrets Global Docker registry secret names as an array
 ##
 global:
-  imageRegistry: "swr.cn-east-3.myhuaweicloud.com/r4in"
+  imageRegistry: ""
   ## E.g.
   ## imagePullSecrets:
   ##   - myRegistryKeySecretName
