--- a/helmfile/releases/kube-prometheus-stack.yaml
+++ b/helmfile/releases/kube-prometheus-stack.yaml
@@ -8,7 +8,8 @@ releases:
   installed: true
   name: kube-prometheus-stack
   namespace: observe
+  skipDeps: true
   labels:
     app: kube-prometheus-stack
   values:
-  - ../values/kube-prometheus-stack.gotmpl
+  - ../values/kube-prometheus-stack.yaml.gotmpl
