--- a/helmfile/envs/default/common.yaml
+++ b/helmfile/envs/default/common.yaml
@@ -1,5 +1,20 @@
 # 镜像仓库，用于覆盖各个 chart 中的全局镜像仓库
 __REGISTRY__: "swr.cn-east-3.myhuaweicloud.com/r4in"
+# 域名，需要域名的场景（比如 Ingress 等）会使用该变量作为主域名，各个应用会有各自的子域名，比如: grafana.{{ __DOMAIN__ }}
+__DOMAIN__: "lab.com"
+
+
+# Prometheus
+## 是否创建 Ingress，将会为 kube-prometheus-stack 中的服务创建 Ingress
+__PROMETHEUS_INGRESS_ENABLE__: true
+## 是否创建默认的告警规则
+__PROMETHEUS_CREATE_DEFAULT_RULES__: false
+
+# Grafana/Grafana-operator
+## 是否创建 Ingress
+__GRAFANA_INGRESS_ENABLE__: true
+__GRAFANA_ADMIN_USER__: admin
+__GRAFANA_ADMIN_PASSWORD__: P@88M0RD
 
 
 
